integrating jwt with UeControllerTestTest